feat(TUP-25226): Make the hadoop conf jar path a contextualizable parameter in the Hadoop conf wizard
https://jira.talendforge.org/browse/TUP-25226

--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -43,7 +43,7 @@ HadoopClusterForm.text.rmScheduler=Resource Manager Scheduler
 HadoopClusterForm.text.jobHistory=Job History
 HadoopClusterForm.text.stagingDirectory=Staging directory
 HadoopClusterForm.button.useDNHost=Use datanode hostname
-HadoopClusterForm.button.useCustomConf=Use custom hadoop confs
+HadoopClusterForm.button.useCustomConf.label=Use custom Hadoop configuration
 HadoopClusterForm.button.overrideCustomConf=Set path to custom Hadoop configuration JAR
 HadoopClusterForm.button.overrideCustomConfPath.browse=Select Hadoop configuration file from local file system
 HadoopClusterForm.button.useSparkProperties=Use Spark Properties
@@ -73,7 +73,6 @@ HadoopClusterForm.check.maprTCluster=Cluster Name must be specified
 HadoopClusterForm.check.maprTCluster.invalid=Cluster Name is invalid
 HadoopClusterForm.check.maprTDuration=Ticket Duration must be specified
 HadoopClusterForm.check.maprTDuration.invalid=Ticket Duration is invalid
-HadoopClusterForm.check.overrideCustomConf.warn=Studio will use the configuration jar from the path you configured, instead of the custom configuration.
 
 HadoopClusterForm.button.check=Check Services
 HadoopClusterForm.checkServices.warning1=Note that the check of services may fail if the connection needs some specific Hadoop properties,
