feat(TUP-25120)Merge nexus proxy setup

--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -310,7 +310,7 @@ DynamicDistributionDetailsForm.baseJars.table.groupName=Group name
 DynamicDistributionDetailsForm.baseJars.table.groupDetails.btn=...
 
 DynamicDistributionPreferenceForm.group.existing=Dynamic distributions
-DynamicDistributionPreferenceForm.group.nexusSetup=Nexus / Artifactory setup
+DynamicDistributionPreferenceForm.group.dynamicDistribution=Dynamic Distribution Proxy Setup
 DynamicDistributionPreferenceForm.label.existing.distribution=Distribution
 DynamicDistributionPreferenceForm.label.existing.version=Version
 DynamicDistributionPreferenceForm.label.existing.delete=Delete
