feat(TUP-25120)Merge nexus proxy setup

--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -336,6 +336,10 @@ DynamicDistributionPreferenceForm.delete.progress.unregist=Unregisting the dynam
 DynamicDistributionPreferenceForm.delete.progress.deleteFile=Deleting the dynamic distribution "{0}", please wait...
 DynamicDistributionPreferenceForm.delete.progress.resetCache=Reseting system cache, please wait...
 DynamicDistributionPreferenceForm.progress.reload=Reloading dynamic distributions, please wait...
+DynamicDistributionPreferenceForm.button.checkConnection=Check Connection
+DynamicDistributionPreferenceForm.checkConnection.connectionFailureMsg=Connection failure,please check the proxy configuration
+DynamicDistributionPreferenceForm.messageBox.checkConnection=Check Connection
+DynamicDistributionPreferenceForm.checkConnection.successMsg=Connection successful.
 
 DynamicDistributionsLabelProvider.label.existing.builtin={0} [Builtin]
 DynamicDistributionsLabelProvider.label.existing.currentProject={0} [Current project]
