Revert "Revert "Cmeng/patch/7.2.1/tps 3583 custom hadoop conf (#1187)""
This reverts commit 9f45f88dc97bdea5459052829916ee1e464703c2.

--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -43,8 +43,12 @@ HadoopClusterForm.text.rmScheduler=Resource Manager Scheduler
 HadoopClusterForm.text.jobHistory=Job History
 HadoopClusterForm.text.stagingDirectory=Staging directory
 HadoopClusterForm.button.useDNHost=Use datanode hostname
-HadoopClusterForm.button.useCustomConf=Use custom hadoop confs
+HadoopClusterForm.button.useCustomConf.label=Use custom Hadoop configuration
+HadoopClusterForm.button.overrideCustomConf=Set path to custom Hadoop configuration JAR
+HadoopClusterForm.button.overrideCustomConfPath.browse=Select Hadoop configuration file from local file system
 HadoopClusterForm.button.useSparkProperties=Use Spark Properties
+HadoopClusterForm.button.config=Configuration
+HadoopClusterForm.group.customConf=Custom Hadoop configuration
 HadoopClusterForm.authenticationSettings=Authentication
 HadoopClusterForm.button.kerberos=Enable kerberos security
 HadoopClusterForm.text.namenodePrincipal=Namenode Principal
