--- a/i18n/plugins/org.talend.repository.nosql.nl/src/messages_fr.properties
+++ b/i18n/plugins/org.talend.repository.nosql.nl/src/messages_fr.properties
@@ -119,5 +119,5 @@ noSQLRepositoryTranslator.CASSANDRA_3_0=Cassandra 3.0.x
 noSQLRepositoryTranslator.CASSANDRA_2_2=Cassandra 2.2.x
 noSQLRepositoryTranslator.NEO4J_2_3_X=Neo4J 2.3.X
 Neo4jConnForm.setUsername.label=D\u00E9finir l'identifiant
-noSQLRepositoryTranslator.MONGODB_3_5_X=MongoDB 3.5.X
+noSQLRepositoryTranslator.MONGODB_3_5_X=MongoDB 3.5.X and later
 noSQLRepositoryTranslator.NEO4J_3_2_X=Neo4J 3.2.X
