--- a/i18n/plugins/org.talend.repository.nosql.nl/src/messages_ja.properties
+++ b/i18n/plugins/org.talend.repository.nosql.nl/src/messages_ja.properties
@@ -127,6 +127,6 @@ noSQLRepositoryTranslator.CASSANDRA_3_0=Cassandra 3.0.x
 noSQLRepositoryTranslator.CASSANDRA_2_2=Cassandra 2.2.x
 noSQLRepositoryTranslator.NEO4J_2_3_X=Neo4J 2.3.X
 Neo4jConnForm.setUsername.label=\u30E6\u30FC\u30B6\u30FC\u540D\u306E\u8A2D\u5B9A
-noSQLRepositoryTranslator.MONGODB_3_5_X=MongoDB 3.5.X
+noSQLRepositoryTranslator.MONGODB_3_5_X=MongoDB 3.5.X and later
 noSQLRepositoryTranslator.NEO4J_3_2_X=Neo4J 3.2.X
 noSQLConnectionTest.cancelCheckConnection=\u63A5\u7D9A\u30C1\u30A7\u30C3\u30AF\u304C\u30AD\u30E3\u30F3\u30BB\u30EB\u3055\u308C\u307E\u3057\u305F\u3002
