--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraRow/tCassandraRow_messages_fr.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraRow/tCassandraRow_messages_fr.properties
@@ -18,14 +18,14 @@ REQUIRED_AUTHENTICATION.NAME=Authentification requise
 USERNAME.NAME=Utilisateur
 USE_EXISTING_CONNECTION.NAME=Utiliser une connexion existante
 DB_VERSION.NAME=Version de la base de donn\u00E9es
-DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2 (Deprecated)
-DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (Deprecated)
-DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
+DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2 (D\u00E9pr\u00E9ci\u00E9)
+DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (D\u00E9pr\u00E9ci\u00E9)
+DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0 (D\u00E9pr\u00E9ci\u00E9)
 KEY_SPACE_DATASTAX.NAME=Keyspace
 API_TYPE.NAME=Type d'API
 API_TYPE.ITEM.HECTOR=Hector
 API_TYPE.ITEM.DATASTAX=Datastax
 TABLE.NAME=Famille de colonne
-DB_VERSION.ITEM.CASSANDRA_2_2=Cassandra 2.2.x
+DB_VERSION.ITEM.CASSANDRA_2_2=Cassandra 2.2.x (D\u00E9pr\u00E9ci\u00E9)
 DB_VERSION.ITEM.CASSANDRA_3_0=Cassandra 3.0.x
 USE_HTTPS.NAME=Utiliser SSL
