--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraBulkExec/tCassandraBulkExec_messages_fr.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraBulkExec/tCassandraBulkExec_messages_fr.properties
@@ -1,8 +1,8 @@
 SCHEMA.NAME=Sch\u00E9ma
 DB_VERSION.NAME=Version de la base de donn\u00E9es
-DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2 (Deprecated)
-DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (Deprecated)
-DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
+DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2 (D\u00E9pr\u00E9ci\u00E9)
+DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (D\u00E9pr\u00E9ci\u00E9)
+DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0 (D\u00E9pr\u00E9ci\u00E9)
 HOST.NAME=H\u00F4te
 PORT.NAME=Port
 REQUIRED_AUTHENTICATION.NAME=Authentification requise
@@ -17,7 +17,7 @@ COMPARATOR.ITEM.LONGTYPE=LongType
 COMPARATOR.ITEM.TIMEUUIDTYPE=TimeUUIDType
 COMPARATOR.ITEM.UTF8TYPE=UTF8Type
 BUFFER_SIZE.NAME=Taille m\u00E9moire tampon (Mo)
-DB_VERSION.ITEM.CASSANDRA_2_1=Cassandra 2.1.x
-DB_VERSION.ITEM.CASSANDRA_2_2=Cassandra 2.2.x
+DB_VERSION.ITEM.CASSANDRA_2_1=Cassandra 2.1.x (D\u00E9pr\u00E9ci\u00E9)
+DB_VERSION.ITEM.CASSANDRA_2_2=Cassandra 2.2.x (D\u00E9pr\u00E9ci\u00E9)
 DB_VERSION.ITEM.CASSANDRA_3_0=Cassandra 3.3.x/3.2.x/3.1.x/3.0.x
 USE_CONF_FILE.NAME=Utiliser le fichier de configuration (cassandra.yaml)
