--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages_fr.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages_fr.properties
@@ -56,10 +56,10 @@ SUPER_COLUMN_TYPE.ITEM.BOOLEAN=Boolean
 SUPER_COLUMN_TYPE.ITEM.OBJECT=Object
 SUPER_COLUMN_TYPE.ITEM.SHORT=Short
 DB_VERSION.NAME=Version de la base de donn\u00E9es
-DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2 (Deprecated)
-DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (Deprecated)
+DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2 (D\u00E9pr\u00E9ci\u00E9)
+DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (D\u00E9pr\u00E9ci\u00E9)
 ROW_KEY_TYPE.ITEM.BIGDECIMAL=BigDecimal
-DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
+DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0 (D\u00E9pr\u00E9ci\u00E9)
 ROW_KEY_C_TYPE.ITEM.DEFAULT=D\u00E9faut
 ROW_KEY_C_TYPE.ITEM.INTEGERTYPE=Integer
 ROW_KEY_C_TYPE.ITEM.ASCIITYPE=Ascii
@@ -74,6 +74,6 @@ API_TYPE.ITEM.HECTOR=Hector
 API_TYPE.ITEM.DATASTAX=Datastax
 QUERY.NAME=Requ\u00EAte
 TABLE.NAME=Famille de colonne
-DB_VERSION.ITEM.CASSANDRA_2_2=Cassandra 2.2.x
+DB_VERSION.ITEM.CASSANDRA_2_2=Cassandra 2.2.x (D\u00E9pr\u00E9ci\u00E9)
 DB_VERSION.ITEM.CASSANDRA_3_0=Cassandra 3.0.x
 USE_HTTPS.NAME=Utiliser SSL
