--- a/i18n/plugins/org.talend.repository.nosql.nl/src/messages_en.properties
+++ b/i18n/plugins/org.talend.repository.nosql.nl/src/messages_en.properties
@@ -109,7 +109,7 @@ noSQLRepositoryTranslator.MONGODB_2_4_X=MongoDB 2.4.X
 noSQLRepositoryTranslator.MONGODB_2_5_X=MongoDB 2.5.X
 noSQLRepositoryTranslator.MONGODB_2_6_X=MongoDB 2.6.X
 noSQLRepositoryTranslator.CASSANDRA=Cassandra
-noSQLRepositoryTranslator.CASSANDRA_2_0_0=Cassandra 2.0.0
+noSQLRepositoryTranslator.CASSANDRA_2_0_0=Cassandra 2.0.0 (Deprecated)
 noSQLRepositoryTranslator.NEO4J=Neo4j
 Neo4jConnForm.absPath.label=Absolute path
 noSQLRepositoryTranslator.Neo4=Neo4J
