--- a/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jOutputRelationship/tNeo4jOutputRelationship_messages_fr.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jOutputRelationship/tNeo4jOutputRelationship_messages_fr.properties
@@ -28,10 +28,10 @@ BATCH_IMPORT.NAME=Import par lots
 CONNECTION_GROUP.NAME=Connexion
 BATCH_OPTION.NAME=par lots
 DB_VERSION.NAME=Version de la base de donn\u00E9es
-DB_VERSION.ITEM.NEO4J_1_X_X=Neo4J 1.X.X
-DB_VERSION.ITEM.NEO4J_2_1_X=Neo4J 2.1.X
-DB_VERSION.ITEM.NEO4J_2_2_X=Neo4J 2.2.X
+DB_VERSION.ITEM.NEO4J_1_X_X=Neo4J 1.X.X  (\u975E\u63A8\u5968)
+DB_VERSION.ITEM.NEO4J_2_1_X=Neo4J 2.1.X  (\u975E\u63A8\u5968)
+DB_VERSION.ITEM.NEO4J_2_2_X=Neo4J 2.2.X  (\u975E\u63A8\u5968)
 SET_USERNAME.NAME=D\u00E9finir l'identifiant
 USERNAME.NAME=Utilisateur
 PASSWORD.NAME=Mot de passe
-DB_VERSION.ITEM.NEO4J_2_3_X=Neo4J 2.3.X
+DB_VERSION.ITEM.NEO4J_2_3_X=Neo4J 2.3.X  (\u975E\u63A8\u5968)
