--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages_fr.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages_fr.properties
@@ -10,22 +10,22 @@ USERNAME.NAME=Utilisateur
 CONNECTION.NAME=Connexion
 AUTHENTICATION.NAME=Authentification
 DB_VERSION.NAME=Version de la base de donn\u00E9es
-DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X
-DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
+DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X (D\u00E9pr\u00E9ci\u00E9)
+DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X  
 SET_READ_PREFERENCE.NAME=Configurer les pr\u00E9f\u00E9rences de lecture
 READ_PREFERENCE.NAME=Pr\u00E9f\u00E9rences de lecture
 READ_PREFERENCE.ITEM.PRIMARY=Primaire
 READ_PREFERENCE.ITEM.SECONDARY=Secondaire
 READ_PREFERENCE.ITEM.NEAREST=Plus proche
 USE_SSL.NAME=Utiliser une connexion SSL (utilisez un tSetKeystore pour configurer l'authentification)
-DB_VERSION.ITEM.MONGODB_3_0_X=MongoDB 3.0.X
+DB_VERSION.ITEM.MONGODB_3_0_X=MongoDB 3.0.X (D\u00E9pr\u00E9ci\u00E9)
 AUTHENTICATION_MECHANISM.NAME=M\u00E9canisme d'authentification
 AUTHENTICATION_MECHANISM.ITEM.NEGOTIATE_MEC=NEGOTIATE (Recommand\u00E9 pour les environnements sans Kerberos)
 AUTHENTICATION_MECHANISM.ITEM.PLAIN_MEC=PLAIN SASL
 AUTHENTICATION_MECHANISM.ITEM.SCRAMSHA1_MEC=SCRAM-SHA-1 SASL
 AUTHENTICATION_MECHANISM.ITEM.KERBEROS_MEC=GSSAPI SASL (KERBEROS)
 KRB_KDC.NAME=Serveur KDC
-DB_VERSION.ITEM.MONGODB_3_2_X=MongoDB 3.2.X
+DB_VERSION.ITEM.MONGODB_3_2_X=MongoDB 3.2.X (D\u00E9pr\u00E9ci\u00E9)
 SET_AUTHENTICATION_DATABASE.NAME=Configurer l'authentification \u00E0 la BdD
 AUTHENTICATION_DATABASE.NAME=Base de donn\u00E9es d'authentification
 QUERYOPTION_NOTIMEOUT.NAME=Pas de suspension de requ\u00EAte
