--- a/i18n/plugins/org.talend.repository.hadoopcluster.nl/src/messages_en.properties
+++ b/i18n/plugins/org.talend.repository.hadoopcluster.nl/src/messages_en.properties
@@ -270,9 +270,9 @@ HadoopClusterForm.webHDFS.encryption=WebHDFS Encryption
 HadoopClusterForm.webHDFS.encryption.useSSLEncryption=Use SSL encryption
 HadoopClusterForm.webHDFS.encryption.useSSLEncryption.trustStorePath=TrustStore path
 HadoopClusterForm.webHDFS.encryption.useSSLEncryption.trustStorePassword=TrustStore password
-HadoopClusterForm.webHDFS.check.trustStorePath=Trust store path must be specified
-HadoopClusterForm.webHDFS.check.trustStorePassword=Trust store password must be specified
-HadoopClusterForm.webHDFS.check.trustStorePassword.invalid=Trust store password is invalid
+HadoopClusterForm.webHDFS.check.trustStorePath=The TrustStore path is required.
+HadoopClusterForm.webHDFS.check.trustStorePassword=The TrustStore password is required.
+HadoopClusterForm.webHDFS.check.trustStorePassword.invalid=The TrustStore password is invalid.
 DynamicDistributionPreferenceForm.group.dynamicDistribution=Dynamic Distribution Proxy Setup
 DynamicDistributionPreferenceForm.button.checkConnection=Check Connection
 DynamicDistributionPreferenceForm.checkConnection.connectionFailureMsg=Connection failure,please check the proxy configuration
