--- a/i18n/plugins/org.talend.repository.hadoopcluster.nl/src/messages_fr.properties
+++ b/i18n/plugins/org.talend.repository.hadoopcluster.nl/src/messages_fr.properties
@@ -182,3 +182,6 @@ QuboleInfoForm.combo.regionIraland=UE (Irlande)
 DataBricksInfoForm.text.token=Jeton
 HadoopClusterForm.webHDFS.encryption.useSSLEncryption.trustStorePath=Chemin TrustStore
 HadoopClusterForm.webHDFS.encryption.useSSLEncryption.trustStorePassword=Mot de passe TrustStore
+HadoopClusterForm.webHDFS.check.trustStorePath=Le chemin TrustStore est requis.
+HadoopClusterForm.webHDFS.check.trustStorePassword=Le mot de passe TrustStore est requis.
+HadoopClusterForm.webHDFS.check.trustStorePassword.invalid=Le mot de passe TrustStore n'est pas valide.
