--- a/i18n/plugins/org.talend.repository.hadoopcluster.nl/src/messages_fr.properties
+++ b/i18n/plugins/org.talend.repository.hadoopcluster.nl/src/messages_fr.properties
@@ -180,8 +180,8 @@ ExceptionDialog.title=Une erreur est survenue
 ExceptionDialog.message.empty=Consultez les logs ci-dessous.
 QuboleInfoForm.combo.regionIraland=UE (Irlande)
 DataBricksInfoForm.text.token=Jeton
-HadoopClusterForm.webHDFS.encryption.useSSLEncryption.trustStorePath=Chemin TrustStore
-HadoopClusterForm.webHDFS.encryption.useSSLEncryption.trustStorePassword=Mot de passe TrustStore
-HadoopClusterForm.webHDFS.check.trustStorePath=Le chemin TrustStore est requis.
-HadoopClusterForm.webHDFS.check.trustStorePassword=Le mot de passe TrustStore est requis.
-HadoopClusterForm.webHDFS.check.trustStorePassword.invalid=Le mot de passe TrustStore n'est pas valide.
+HadoopClusterForm.webHDFS.encryption.useSSLEncryption.trustStorePath=Chemin du TrustStore
+HadoopClusterForm.webHDFS.encryption.useSSLEncryption.trustStorePassword=Mot de passe du TrustStore
+HadoopClusterForm.webHDFS.check.trustStorePath=Le chemin d'acc\u00E8s au TrustStore est requis.
+HadoopClusterForm.webHDFS.check.trustStorePassword=Le mot de passe du TrustStore est requis.
+HadoopClusterForm.webHDFS.check.trustStorePassword.invalid=Le mot de passe du TrustStore est invalide.
