--- a/i18n/plugins/org.talend.repository.hadoopcluster.nl/src/messages_zh_CN.properties
+++ b/i18n/plugins/org.talend.repository.hadoopcluster.nl/src/messages_zh_CN.properties
@@ -268,9 +268,11 @@ HadoopClusterForm.button.config=\u914D\u7F6E
 HadoopClusterForm.group.customConf=\u81EA\u5B9A\u4E49 Hadoop \u914D\u7F6E
 HadoopClusterForm.webHDFS.encryption=WebHDFS \u52A0\u5BC6
 HadoopClusterForm.webHDFS.encryption.useSSLEncryption=\u4F7F\u7528 SSL \u52A0\u5BC6
-HadoopClusterForm.webHDFS.check.trustStorePath=\u5FC5\u987B\u6307\u5B9A\u4FE1\u4EFB\u5E93\u8DEF\u5F84
-HadoopClusterForm.webHDFS.check.trustStorePassword=\u5FC5\u987B\u6307\u5B9A\u4FE1\u4EFB\u5E93\u5BC6\u7801
-HadoopClusterForm.webHDFS.check.trustStorePassword.invalid=\u4FE1\u4EFB\u5E93\u5BC6\u7801\u65E0\u6548
+HadoopClusterForm.webHDFS.encryption.useSSLEncryption.trustStorePath=\u4FE1\u4EFB\u5E93\u8DEF\u5F84
+HadoopClusterForm.webHDFS.encryption.useSSLEncryption.trustStorePassword=\u4FE1\u4EFB\u5E93\u5BC6\u7801
+HadoopClusterForm.webHDFS.check.trustStorePath=\u9700\u8981\u4FE1\u4EFB\u5E93\u8DEF\u5F84\u3002
+HadoopClusterForm.webHDFS.check.trustStorePassword=\u9700\u8981\u4FE1\u4EFB\u5E93\u5BC6\u7801\u3002
+HadoopClusterForm.webHDFS.check.trustStorePassword.invalid=\u4FE1\u4EFB\u5E93\u5BC6\u7801\u65E0\u6548\u3002
 DynamicDistributionPreferenceForm.group.dynamicDistribution=\u52A8\u6001\u5206\u914D\u4EE3\u7406\u8BBE\u7F6E
 DynamicDistributionPreferenceForm.button.checkConnection=\u68C0\u67E5\u8FDE\u63A5
 DynamicDistributionPreferenceForm.checkConnection.connectionFailureMsg=\u8FDE\u63A5\u5931\u8D25\uFF0C\u8BF7\u68C0\u67E5\u4EE3\u7406\u914D\u7F6E
