--- a/i18n/plugins/org.talend.repository.nosql.nl/src/messages_ja.properties
+++ b/i18n/plugins/org.talend.repository.nosql.nl/src/messages_ja.properties
@@ -107,6 +107,7 @@ noSQLRepositoryTranslator.MONGODB_2_1_2=MongoDB 2.1.X
 noSQLRepositoryTranslator.MONGODB_2_2_3=MongoDB 2.2.X
 noSQLRepositoryTranslator.MONGODB_2_4_X=MongoDB 2.4.X
 noSQLRepositoryTranslator.MONGODB_2_5_X=MongoDB 2.5.X
+noSQLRepositoryTranslator.MONGODB_2_6_X=MongoDB 2.6.X
 noSQLRepositoryTranslator.CASSANDRA=Cassandra
 noSQLRepositoryTranslator.CASSANDRA_2_0_0=Cassandra 2.0.0 (\u975E\u63A8\u5968)
 noSQLRepositoryTranslator.NEO4J=Neo4j
