--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutputBulk/tCassandraOutputBulk_messages_zh_CN.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutputBulk/tCassandraOutputBulk_messages_zh_CN.properties
@@ -29,6 +29,7 @@ TABLE_TYPE.NAME=\u8868\u7C7B\u578B
 TABLE_TYPE.ITEM.NON_CQL=non-cql
 TABLE_TYPE.ITEM.CQL=cql
 SCHEMA_STMT.NAME=Schema \u8BED\u53E5
+INSERT_STMT.NAME=\u63D2\u5165
 DB_VERSION.ITEM.CASSANDRA_2_1=Cassandra 2.1.x (\u5DF2\u5F03\u7528)
 DB_VERSION.ITEM.CASSANDRA_2_2=Cassandra 2.2.x (\u5DF2\u5F03\u7528)
 DB_VERSION.ITEM.CASSANDRA_3_0=Cassandra 3.3.x/3.2.x/3.1.x/3.0.x
