--- a/main/plugins/org.talend.designer.components.bigdata/components/tDynamoDBOutput/tDynamoDBOutput_messages_fr.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tDynamoDBOutput/tDynamoDBOutput_messages_fr.properties
@@ -46,6 +46,7 @@ CONNECTION.NAME=Liste des composants
 RCU.NAME=Unit\u00E9 de capacit\u00E9 de lecture
 WCU.NAME=Unit\u00E9 de capacit\u00E9 d'\u00E9criture
 NAME_MAPPING.ITEM.NAME=Nom
+ASSUME_ROLE.NAME=Assume role
 ARN.NAME=R\u00F4le ARN
 SESSION_DURATION.NAME=Dur\u00E9e de la session
 SET_STS_ENDPOINT.NAME=Endpoint STS
