--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages_fr.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages_fr.properties
@@ -113,7 +113,7 @@ HIVE_VERSION.ITEM.APACHE_2_4_0_EMR=Apache 2.4.0 (Hive 0.11.0)
 HIVE_VERSION.ITEM.MICROSOFT_HD_INSIGHT_3_1=Microsoft HD Insight 3.1
 S3_LOCATION.NAME=Utiliser un endpoint S3
 S3_BUCKET.NAME=Bucket S3
-S3_USERNAME.NAME=Cl\u00E9 d'acc\u00E8s AWS
+S3_USERNAME.NAME=Cl\u00E9 d'acc\u00E8s
 S3_PASSWORD.NAME=Cl\u00E9 d'acc\u00E8s secr\u00E8te
 USE_DATANODE_HOSTNAME.NAME=Utiliser le nom d'h\u00F4te du n\u0153ud de donn\u00E9es
 WEBHCAT_CONF.NAME=Configuration de WebHCat
