--- a/main/plugins/org.talend.designer.components.bigdata/components/tImpalaCreateTable/tImpalaCreateTable_messages_fr.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tImpalaCreateTable/tImpalaCreateTable_messages_fr.properties
@@ -21,7 +21,7 @@ SET_FILE_LOCATION.NAME=Configurer l'emplacement du fichier
 FILE_LOCATION.NAME=Chemin de l'URI
 S3_LOCATION.NAME=Utiliser l'endpoint S3 (table externe)
 S3_BUCKET.NAME=Bucket S3
-S3_USERNAME.NAME=Cl\u00E9 d'acc\u00E8s AWS
+S3_USERNAME.NAME=Cl\u00E9 d'acc\u00E8s
 S3_PASSWORD.NAME=Cl\u00E9 d'acc\u00E8s secr\u00E8te
 SET_PARTITIONS.NAME=Configurer les partitions
 STORAGE_FORMAT.NAME=Format
