--- a/i18n/plugins/org.talend.repository.hadoopcluster.nl/src/messages_ja.properties
+++ b/i18n/plugins/org.talend.repository.hadoopcluster.nl/src/messages_ja.properties
@@ -268,8 +268,10 @@ HadoopClusterForm.button.config=\u8A2D\u5B9A
 HadoopClusterForm.group.customConf=\u30AB\u30B9\u30BF\u30E0Hadoop\u8A2D\u5B9A
 HadoopClusterForm.webHDFS.encryption=WebHDFS\u6697\u53F7\u5316
 HadoopClusterForm.webHDFS.encryption.useSSLEncryption=SSL\u6697\u53F7\u5316\u3092\u4F7F\u7528
-HadoopClusterForm.webHDFS.check.trustStorePath=\u4FE1\u983C\u30B9\u30C8\u30A2\u306E\u30D1\u30B9\u3092\u6307\u5B9A\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059
-HadoopClusterForm.webHDFS.check.trustStorePassword=\u4FE1\u983C\u30B9\u30C8\u30A2\u306E\u30D1\u30B9\u30EF\u30FC\u30C9\u3092\u6307\u5B9A\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059
+HadoopClusterForm.webHDFS.encryption.useSSLEncryption.trustStorePath=\u30C8\u30E9\u30B9\u30C8\u30B9\u30C8\u30A2\u30D1\u30B9:
+HadoopClusterForm.webHDFS.encryption.useSSLEncryption.trustStorePassword=TrustStore\u30D1\u30B9\u30EF\u30FC\u30C9
+HadoopClusterForm.webHDFS.check.trustStorePath=The TrustStore path is required.
+HadoopClusterForm.webHDFS.check.trustStorePassword=The TrustStore password is required.
 HadoopClusterForm.webHDFS.check.trustStorePassword.invalid=\u4FE1\u983C\u30B9\u30C8\u30A2\u306E\u30D1\u30B9\u30EF\u30FC\u30C9\u304C\u7121\u52B9\u3067\u3059
 DynamicDistributionPreferenceForm.group.dynamicDistribution=\u30C0\u30A4\u30CA\u30DF\u30C3\u30AF\u30C7\u30A3\u30B9\u30C8\u30EA\u30D3\u30E5\u30FC\u30B7\u30E7\u30F3\u30D7\u30ED\u30AD\u30B7\u306E\u30BB\u30C3\u30C8\u30A2\u30C3\u30D7
 DynamicDistributionPreferenceForm.button.checkConnection=\u63A5\u7D9A\u3092\u30C1\u30A7\u30C3\u30AF
