--- a/i18n/plugins/org.talend.repository.nosql.nl/src/messages_zh_CN.properties
+++ b/i18n/plugins/org.talend.repository.nosql.nl/src/messages_zh_CN.properties
@@ -107,6 +107,7 @@ noSQLRepositoryTranslator.MONGODB_2_1_2=\u6570\u636E\u5E93 MongoDB 2.1.X
 noSQLRepositoryTranslator.MONGODB_2_2_3=MongoDB 2.2.X
 noSQLRepositoryTranslator.MONGODB_2_4_X=MongoDB 2.4.X
 noSQLRepositoryTranslator.MONGODB_2_5_X=MongoDB 2.5.X
+noSQLRepositoryTranslator.MONGODB_2_6_X=MongoDB 2.6.X
 noSQLRepositoryTranslator.CASSANDRA=Cassandra
 noSQLRepositoryTranslator.CASSANDRA_2_0_0=Cassandra 2.0.0 (\u5DF2\u5F03\u7528)
 noSQLRepositoryTranslator.NEO4J=Neo4j
