fix(TUP-26155):Talend to MongoDB with SSL Connection

--- a/main/plugins/org.talend.repository.nosql/src/messages.properties
+++ b/main/plugins/org.talend.repository.nosql/src/messages.properties
@@ -84,7 +84,7 @@ MongoDBConnForm.useReplicaBtn=Use replica set address
 MongoDBConnForm.username=Username
 
 MongoDBConnForm.encryption=Encryption
-MongoDBConnForm.encryption.requireSSLEncryption=Require ssl encryption
+MongoDBConnForm.encryption.requireSSLEncryption=Enable SSL (using preference setup)
 
 MongoDBReplicaTableView.replicaHost=Replica host
 MongoDBReplicaTableView.replicaPort=Replica port
