fix(TUP-25739)the label in metadata is not match the one in mongodb component https://jira.talendforge.org/browse/TUP-25739

--- a/main/plugins/org.talend.repository.nosql/src/messages.properties
+++ b/main/plugins/org.talend.repository.nosql/src/messages.properties
@@ -137,7 +137,7 @@ noSQLRepositoryTranslator.MONGODB_2_5_X=MongoDB 2.5.X
 noSQLRepositoryTranslator.MONGODB_2_6_X=MongoDB 2.6.X
 noSQLRepositoryTranslator.MONGODB_3_0_X=MongoDB 3.0.X
 noSQLRepositoryTranslator.MONGODB_3_2_X=MongoDB 3.2.X
-noSQLRepositoryTranslator.MONGODB_3_5_X=MongoDB 3.5.X and later
+noSQLRepositoryTranslator.MONGODB_3_5_X_AND_LATER=MongoDB 3.5.X and later
 
 noSQLRepositoryTranslator.CASSANDRA=Cassandra
 noSQLRepositoryTranslator.CASSANDRA_2_0_0=CASSANDRA_2_0_0=Cassandra 2.0.x (Deprecated)/2.1.x
